--- a/index.html
+++ b/index.html
@@ -117,31 +117,31 @@
                   <div class="accordion-body">
                     <div class="list-group">
                       <a
-                        href="./html_task/task_1.html"
+                        href="./assets/html_task/task_1.html"
                         target="_blank"
                         class="text-primary list-group-item list-group-item-action"
                         >Task 1</a
                       >
                       <a
-                        href="./html_task/task_2.html"
+                        href="./assets/html_task/task_2.html"
                         target="_blank"
                         class="text-primary list-group-item list-group-item-action"
                         >Task 2</a
                       >
                       <a
-                        href="./html_task/task_3.html"
+                        href="./assets/html_task/task_3.html"
                         target="_blank"
                         class="text-primary list-group-item list-group-item-action"
                         >Task 3</a
                       >
                       <a
-                        href="./html_task/task_4.html"
+                        href="./assets/html_task/task_4.html"
                         target="_blank"
                         class="text-primary list-group-item list-group-item-action"
                         >Task 4</a
                       >
                       <a
-                        href="./html_task/task_5.html"
+                        href="./assets/html_task/task_5.html"
                         target="_blank"
                         class="text-primary list-group-item list-group-item-action"
                         >Task 5</a
@@ -172,49 +172,49 @@
                   <div class="accordion-body">
                     <div class="list-group">
                       <a
-                        href="./css_task/task_1_a.html"
+                        href="./assets/css_task/task_1_a.html"
                         target="_blank"
                         class="text-primary list-group-item list-group-item-action"
                         >Task 1a</a
                       >
                       <a
-                        href="./css_task/task_1_b.html"
+                        href="./assets/css_task/task_1_b.html"
                         target="_blank"
                         class="text-primary list-group-item list-group-item-action"
                         >Task 1b</a
                       >
                       <a
-                        href="./css_task/task_2.html"
+                        href="./assets/css_task/task_2.html"
                         target="_blank"
                         class="text-primary list-group-item list-group-item-action"
                         >Task 2</a
                       >
                       <a
-                        href="./css_task/task_3.html"
+                        href="./assets/css_task/task_3.html"
                         target="_blank"
                         class="text-primary list-group-item list-group-item-action"
                         >Task 3</a
                       >
                       <a
-                        href="./css_task/task_4.html"
+                        href="./assets/css_task/task_4.html"
                         target="_blank"
                         class="text-primary list-group-item list-group-item-action"
                         >Task 4</a
                       >
                       <a
-                        href="./css_task/task_5.html"
+                        href="./assets/css_task/task_5.html"
                         target="_blank"
                         class="text-primary list-group-item list-group-item-action"
                         >Task 5</a
                       >
                       <a
-                        href="./css_task/task_6.html"
+                        href="./assets/css_task/task_6.html"
                         target="_blank"
                         class="text-primary list-group-item list-group-item-action"
                         >Task 6</a
                       >
                       <a
-                        href="./css_task/task_7.html"
+                        href="./assets/css_task/task_7.html"
                         target="_blank"
                         class="text-primary list-group-item list-group-item-action"
                         >Task 7</a
